# aeropod

./: .gitignore  ASSEMBLY.md  README.md  aeropod_case.step  audio.py  camera.py  clickwheel.py  games.py  main.py  parts_list.md  renderer.py
aeropod2/: aeropod2.kicad_pcb  aeropod2.kicad_pro  aeropod2.kicad_sch  audio.kicad_sch  display.kicad_sch  esp32.kicad_sch  input.kicad_sch  power.kicad_sch  storage.kicad_sch
aeropod2/gerbers/: aeropod2-B_Cu.gbl  (+13 more)
aeropod_firmware/: BUILD.md  CMakeLists.txt  partitions.csv  sdkconfig.defaults
aeropod_firmware/main/: CMakeLists.txt  config.h  main.c
aeropod_firmware/main/audio/: i2s_output.c  i2s_output.h  minimp3.h  player.c  player.h
aeropod_firmware/main/bt_audio/: bt_audio.c  bt_audio.h  bt_screen.c
aeropod_firmware/main/drivers/: clickwheel.c  clickwheel.h  display.c  display.h  font_12x20.h  font_6x8.h  font_8x12.h
aeropod_firmware/main/network/: http_stream.c  http_stream.h  wifi_manager.c  wifi_manager.h
aeropod_firmware/main/spotify/: spotify.c  spotify.h  spotify_screen.c
aeropod_firmware/main/storage/: media_db.c  media_db.h  sdcard.c  sdcard.h
aeropod_firmware/main/ui/: ui.c  ui.h
aeropod_firmware/main/ui/screens/: main_menu.c  main_menu.h  music_menu.c  music_menu.h  now_playing.c  now_playing.h  settings.c  settings.h  streaming.c  streaming.h
aeropod_firmware/main/video/: tjpgd.h  video_player.c  video_player.h  video_screen.c
case/: Aeropod_Case.step  Aeropod_Case.stl
clickwheel/: DRC.rpt  clickwheel.kicad_pcb  clickwheel.kicad_pro  clickwheel.kicad_sch  clickwheel.step
wiring/: guide.md
(+22 files in other folders)
