idf_component_register(
    SRCS
        "main.c"
        "drivers/clickwheel.c"
        "drivers/display.c"
        "audio/i2s_output.c"
        "audio/player.c"
        "storage/sdcard.c"
        "storage/media_db.c"
        "network/wifi_manager.c"
        "spotify/spotify.c"
        "spotify/spotify_screen.c"
        "bt_audio/bt_audio.c"
        "bt_audio/bt_screen.c"
        "ui/ui.c"
        "ui/screens/main_menu.c"
        "ui/screens/music_menu.c"
        "ui/screens/now_playing.c"
        "ui/screens/settings.c"
        "ui/screens/streaming.c"
        "video/video_player.c"
        "video/video_screen.c"
    INCLUDE_DIRS
        "."
        "drivers"
        "audio"
        "storage"
        "network"
        "spotify"
        "bt_audio"
        "ui"
        "ui/screens"
        "video"
    REQUIRES
        driver
        esp_wifi
        nvs_flash
        fatfs
        sdmmc
        esp_http_client
        esp_netif
        esp_event
        esp_tls
        mdns
        bt
        freertos
        log
        heap
        spi_flash
        mbedtls
        json
)
